# embedded-device-core-beta

./: .gitignore  CMakeLists.txt  Readme.md
src/: CMakeLists.txt  ipc_protocol.fbs
src/monitor/: CMakeLists.txt  configuration.c  configuration.h  control_loop.cc  control_loop.h  fifo.c  fifo.h  main.c  panic.c  panic.h  queue.c  queue.h
src/webui/: CMakeLists.txt  ipc.py  webui.py
src/webui/locales/: base.pot
src/webui/locales/it/LC_MESSAGES/: base.po
src/webui/templates/: uninitialized-index.html
